# jobtrack

./: JobTrack.py  README.md  job_data.csv  job_data.xlsx  pyproject.toml
data/: Job_Tracker.xlsx
pages/: Documentation.py  Get_in_Touch.py
